# kcg

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  lint.rs  main.rs
src/codegen/: mod.rs
src/codegen/rust/: codegen.rs  mod.rs  test.rs
src/model/: feature.rs  message.rs  mod.rs
src/scan/: mod.rs
src/scan/openapi3/: lint.rs  mod.rs  model.rs  scan.rs  test.rs
src/util/: mod.rs
tests/: mod.rs
tests/sample1/: prelude.rs  src.yaml  test.sh  test_full_cycle.sh
