[package]
name = "kcg"
version = "0.0.0"
edition = "2021"
description = "KCG is Schema Code-Gen."

[dependencies]
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.74"
serde_yaml = "0.8.23"
im = "15.0.0"
im-rc = "15.0.0"
indoc = "1.0"
itertools = "0.10.3"
extend = "1.1.2"
linear-map = { version = "1.2.0", features = ["serde_impl"] }
structopt = { version = "0.3", default-features = false }

[lib]
path = "src/lib.rs"

[[bin]]
name = "kcg"

